<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/postal_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <TextView
        android:id="@+id/postal_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/postal_address"
        android:layout_marginStart="16dp"
        android:text="@string/city" />

    <TextView
        android:id="@+id/postal_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/postal_city"
        android:layout_marginStart="16dp"
        android:text="@string/country" />

    <TextView
        android:id="@+id/postal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/postal_country"
        android:layout_marginStart="16dp"
        android:text="@string/label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/postal_label"
        android:layout_marginTop="10dp"
        android:background="@android:color/black" />

</RelativeLayout>