<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.contact.ContactFragment">

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mail_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_addresses" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/postal_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postal_addresses" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/phone_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phones" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
